2002-10-07  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_offset_for_pointer): fix for utf8, start on
	right beginning of slave (Larry)

	* htmltext.c (get_cursor_base): check for offset > slave->posStart
	(get_cursor_base): move to next text only if it doesn't start with
	' '
	(get_cursor): ditto

	* htmltable.c (html_table_end_table): return number of cells in
	table

	* htmlengine.c (parse_table): check if table has any cell after
	html_table_end_table

2002-10-06  Larry Ewing  <lewing@ximian.com>

	* testgtkhtml.c (url_requested): don't pass NULLs to strcmp, this
	is in the test code so it isn't going through the patch list.

2002-10-02  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_set_paragraph_alignment): make sure we
	update the aligment tracking variable when we update the
	alignment.  Fixes http://bugzilla.ximian.com/show_bug.cgi?id=9171

2002-10-02  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (key_press_event): return TRUE only when key_press
	used, didn't happen before for bindigs like Shift-TAB

	* htmlfontmanager.c (html_font_manager_set_default): release plain
	font manager fonts when changing fixed font

	* htmlengine.c (html_engine_class_plain_font_manager): new method
	for access to plain fontmanager
	(html_engine_plain_font_manager): ditto

2002-10-01  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_offset_for_pointer): fixed offset
	computation, use utf8 functions instead of using byte positions

2002-10-01  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (new_obj_from_uri): fix the uri strcmp to actually
	compare the transport, go ahead and paste unknown file types as
	urls (some feedback is better than none).

2002-09-30  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (draw_text): removed unused local variable

	* htmlengine.c (update_embedded): removed unused local variable

	* gtkhtml.c (gtk_html_insert_html_generic): check tmp formlist
	instead of html one

2002-09-25  Radek Doulik  <rodo@ximian.com>
